--- a/index.html
+++ b/index.html
@@ -10,10 +10,17 @@
 <body>
     <main>
         <section id="telefone">
-            <iframe src="home.html" name="tela" id="tela" frameborder="0"></iframe>
+            <iframe src="home.html" name="tela" id="tela" frameborder="0">
+                Seu navegador nâo é compativel com isso.
+            </iframe>
         </section>
-        <sectionn id="redes sociais">
-
+        <section id="redes-sociais">
+            <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt="Home"></a><br>
+            <a href="imagens/tela-youtube.png" target="tela"><img src="imagens/logo-youtube.jpg" alt="YouTube"></a><br>
+            <a href="imagens/tela-github.jpg" target="tela"><img src="imagens/logo-github.jpg" alt="GitHub"></a><br>
+            <a href="imagens/tela-instagram.jpg" target="tela"><img src="imagens/logo-instagram.jpg" alt="Instagram"></a><br>
+            <a href="imagens/tela-twitter.jpg" target="tela"><img src="imagens/logo-twitter.jpg" alt="Twitter"></a><br>
+            <a href="imagens/tela-facebook.jpg" target="tela"><img src="imagens/logo-facebook.jpg" alt="Faceboock"></a>
         </section>
     </main>
 </body>
